@@ -8,6 +8,11 @@ Development version
   - app_id: the application ID as defined in *app.yaml*.
   - version_id: the deployed version ID. Always '1' when using the dev server.
 
+- Removed make_response(). It is unneeded magic that adds many ways to to the
+  same basic thing: build a Response object. If you rely on automatic wrapping
+  returned values from handlers into Response objects, you need to explicitly
+  return Response objects now.
+
 
 Version 0.6.2 - August 20, 2010
 ===============================
